apps/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress-policy
  namespace: database
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hedgedoc
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vaultwarden
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jellyfin
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: librephoto
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lastgasp
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minecraft
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
